--- a/src/locales/langs/de.json
+++ b/src/locales/langs/de.json
@@ -11,5 +11,46 @@
   "TestPage": {
     "maintext": "Dies ist eine Testseite",
     "reduxTitle": "Redux-Beispiel"
+  },
+  "VerificationPage": {
+    "mainTitle": "KYC Formular",
+    "identitySectionTitle": "A. Identitätsdetails",
+    "nameOfTheApplicant": "1. Name des Antragstellers",
+    "namePlaceholder": "Name",
+    "surnamePlaceholder": "Nachname",
+    "role": "1a. Ich fungiere als:",
+    "rolePlaceholder": "Bitte wählen Sie Ihre Rolle aus",
+    "roleAgent": "Agent/Agentin",
+    "roleAgency": "Agentur",
+    "gender": "2. Geschlecht",
+    "genderMale": "Männlich",
+    "genderFemale": "Weiblich",
+    "genderOther": "Möchte nicht angeben",
+    "dateOfBirth": "3. Geburtsdatum",
+    "dateOfBirthPlaceholder": "Wählen Sie Ihr Geburtsdatum aus",
+    "nationality": "4. Nationalität",
+    "nationalityPlaceholder": "Wählen Sie Ihre Nationalität aus",
+    "proofOfIdentity": "5. Identitätsnachweis",
+    "proofPassport": "Reisepass",
+    "proofId": "Ausweis",
+    "proofDL": "Führerschein",
+    "adressSectionTitle": "B. Adressdetails",
+    "status": "6. Status",
+    "statusResident": "Ansässige Einzelperson",
+    "statusNonResident": "Nicht ansässig",
+    "statusForeign": "Ausländischer Staatsbürger",
+    "correspondenceAdress": "7. Korrespondenzadresse",
+    "street": "Straßenadresse",
+    "cityPlaceholder": "Stadt",
+    "statePlaceholder": "Bundesland/Region/Provinz",
+    "zipPlaceholder": "Postleitzahl",
+    "countryPlaceholder": "Land",
+    "phoneNumber": "8. Telefonnummer",
+    "fileSectionTitle": "C. Datei Upload",
+    "drag&DropTitle": "9. Bitte laden Sie entsprechende Dokumente hoch",
+    "declarationSectionTitle": "D. Erklärung",
+    "declarationText": "Ich erkläre hiermit, dass die in diesem Formular bereitgestellten Informationen korrekt und vollständig sind. Ich bestätige, dass falsche und/oder unvollständige Informationen, die zu einem Verstoß gegen Vorschriften führen, rechtliche Maßnahmen auslösen können, und ich akzeptiere, dass ich für alle Gebühren, Strafen und Verstöße verantwortlich bin.",
+    "signature": "Name des Antragstellers",
+    "submitButton": "Abschicken"
   }
 }
