--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -51,6 +51,10 @@
     "declarationSectionTitle": "D. Declaration",
     "declarationText": "I hereby declare that the information provided in this form is accurate and complete. I confirm that any information is found incorrect and/or incomplete that leads a violation of regulations may initiate legal actions, and I accept that I am the responsible party for any and all charges, penalties and violations.",
     "signature": "Name of the Applicant",
-    "submitButton": "Submit"
+    "submitButton": "Submit",
+    "doneTextFirstPart": "Your application was submitted successfully.",
+    "doneTextSecondPart": "It will be reviewed shortly and you will recieve a confirmation message to the email you provided after the application is verified.",
+    "doneTextThirdPart": "Thank you for joining AgentWise!",
+    "goHomeButton": "Go home"
   }
 }
