feat(sign-up): integrate backend using rtk-query

--- a/src/locales/langs/de.json
+++ b/src/locales/langs/de.json
@@ -40,7 +40,9 @@
       "repeatLabel": "Passwort wiederholen",
       "unmatchPass": "Passwörter stimmen nicht überein",
       "haveAcc": "Sie haben bereits ein Konto?",
-      "signInLink": "Einloggen"
+      "signInLink": "Einloggen",
+      "agree": "Indem Sie fortfahren, stimmen Sie AgentWise zu",
+      "and": "und"
     },
     "Terms": {
       "TermsTitle": "Allgemeine Geschäftsbedingungen",
