--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -14,14 +14,23 @@
     "reduxTitle": "Redux example"
   },
   "SignInPage": {
-    "termsLink": "Terms & Conditions",
-    "policyLink": "Privacy Policy",
-    "signUpLink": "Sign Up",
-    "doNot": "Don't have an account?",
-    "agree": "By continuing, you agree to AgentWise",
-    "and": "and"
-  },
-  "LoginForm": {
-    "title": "Sign in"
+    "Main": {
+      "termsLink": "Terms & Conditions",
+      "policyLink": "Privacy Policy",
+      "signUpLink": "Sign Up",
+      "doNot": "Don't have an account?",
+      "agree": "By continuing, you agree to AgentWise",
+      "and": "and"
+    },
+    "LoginForm": {
+      "title": "Sign in",
+      "minPassword": "Min 8 characters",
+      "invalidEmail": "Invalid email address",
+      "requiredField": "Field is required",
+      "emailLabel": "Email",
+      "passwordLabel": "Password",
+      "btnTitle": "  Sign in",
+      "forgotPasswordLinkTitle": "Forgot password"
+    }
   }
 }
