--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -4,7 +4,7 @@
       "title": "Agent Wise"
     },
     "Page": {
-      "title": "Welcome to AgentWise - your  all-in-one solution for effective sales management",
+      "title": "Welcome to AgentWise - the wisest real estate platform aimed at your professional success",
       "link": "Go to Test page",
       "signUpLink": "Sign Up",
       "signInLink": "Sign In",
@@ -38,7 +38,9 @@
       "repeatLabel": "Repeat password",
       "unmatchPass": "Passwords do not match",
       "haveAcc": "Already have an account?",
-      "signInLink": "Sign In"
+      "signInLink": "Sign In",
+      "agree": "By continuing, you agree to AgentWise",
+      "and": "and"
     },
     "Terms": {
       "TermsTitle": "Terms and Conditions",
