--- a/src/locales/langs/de.json
+++ b/src/locales/langs/de.json
@@ -42,7 +42,8 @@
       "haveAcc": "Sie haben bereits ein Konto?",
       "signInLink": "Einloggen",
       "agree": "Indem Sie fortfahren, stimmen Sie AgentWise zu",
-      "and": "und"
+      "and": "und",
+      "loading": "Wird geladen",
     },
     "Terms": {
       "TermsTitle": "Allgemeine Geschäftsbedingungen",
