--- a/src/locales/langs/de.json
+++ b/src/locales/langs/de.json
@@ -43,7 +43,7 @@
       "signInLink": "Einloggen",
       "agree": "Indem Sie fortfahren, stimmen Sie AgentWise zu",
       "and": "und",
-      "loading": "Wird geladen",
+      "loading": "Wird geladen...",
     },
     "Terms": {
       "TermsTitle": "Allgemeine Geschäftsbedingungen",
