fix: changed success text

--- a/src/locales/langs/de.json
+++ b/src/locales/langs/de.json
@@ -15,41 +15,41 @@
   "VerificationPage": {
     "mainTitle": "KYC formular",
     "identitySectionTitle": "A. Identitätsdetails",
-    "nameOfTheApplicant": "1. Name des Antragstellers",
+    "nameOfTheApplicant": "* Name des Antragstellers",
     "namePlaceholder": "Name",
     "surnamePlaceholder": "Nachname",
-    "role": "1a. Ich fungiere als:",
+    "role": "* Ich fungiere als:",
     "rolePlaceholder": "Bitte wählen Sie Ihre Rolle aus",
     "roleAgent": "Agent/Agentin",
     "roleAgency": "Agentur",
-    "gender": "2. Geschlecht",
+    "gender": "* Geschlecht",
     "genderMale": "Männlich",
     "genderFemale": "Weiblich",
     "genderOther": "Möchte nicht angeben",
-    "dateOfBirth": "3. Geburtsdatum",
+    "dateOfBirth": "* Geburtsdatum",
     "dateOfBirthPlaceholder": "Wählen Sie Ihr Geburtsdatum aus",
-    "nationality": "4. Nationalität",
+    "nationality": "* Nationalität",
     "nationalityPlaceholder": "Wählen Sie Ihre Nationalität aus",
-    "proofOfIdentity": "5. Identitätsnachweis",
+    "proofOfIdentity": "* Identitätsnachweis",
     "proofPassport": "Reisepass",
     "proofId": "Ausweis",
     "proofDL": "Führerschein",
     "adressSectionTitle": "B. Adressdetails",
-    "status": "6. Status",
+    "status": "* Status",
     "statusResident": "Ansässige Einzelperson",
     "statusNonResident": "Nicht ansässig",
     "statusForeign": "Ausländischer Staatsbürger",
-    "correspondenceAdress": "7. Korrespondenzadresse",
-    "street": "Straßenadresse",
+    "correspondenceAdress": "Korrespondenzadresse",
+    "street": "* Straßenadresse",
     "cityPlaceholder": "Stadt",
     "statePlaceholder": "Bundesland/Region/Provinz",
     "zipPlaceholder": "Postleitzahl",
     "countryPlaceholder": "Land",
-    "phoneNumber": "8. Telefonnummer",
+    "phoneNumber": "* Telefonnummer",
     "fileSectionTitle": "C. Datei Upload",
-    "drag&DropTitle": "9. Bitte laden Sie entsprechende Dokumente hoch",
+    "drag&DropTitle": "* Bitte laden Sie entsprechende Dokumente hoch",
     "declarationSectionTitle": "D. Erklärung",
-    "declarationText": "Ich erkläre hiermit, dass die in diesem Formular bereitgestellten Informationen korrekt und vollständig sind. Ich bestätige, dass falsche und/oder unvollständige Informationen, die zu einem Verstoß gegen Vorschriften führen, rechtliche Maßnahmen auslösen können, und ich akzeptiere, dass ich für alle Gebühren, Strafen und Verstöße verantwortlich bin.",
+    "declarationText": "* Ich erkläre hiermit, dass die in diesem Formular bereitgestellten Informationen korrekt und vollständig sind. Ich bestätige, dass falsche und/oder unvollständige Informationen, die zu einem Verstoß gegen Vorschriften führen, rechtliche Maßnahmen auslösen können, und ich akzeptiere, dass ich für alle Gebühren, Strafen und Verstöße verantwortlich bin.",
     "signature": "Name des Antragstellers",
     "submitButton": "Abschicken",
     "doneTextFirstPart": "Ihre Bewerbung wurde erfolgreich übermittelt.",
