--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -15,41 +15,41 @@
   "VerificationPage": {
     "mainTitle": "KYC form",
     "identitySectionTitle": "A. Identity Details",
-    "nameOfTheApplicant": "1. Name of the Applicant",
+    "nameOfTheApplicant": "* Name of the Applicant",
     "namePlaceholder": "Name",
     "surnamePlaceholder": "Surname",
-    "role": "1a. I am acting as:",
+    "role": "* I am acting as:",
     "rolePlaceholder": "Please select your role",
     "roleAgent": "Agent",
     "roleAgency": "Agency",
-    "gender": "2. Gender",
+    "gender": "* Gender",
     "genderMale": "Male",
     "genderFemale": "Female",
     "genderOther": "Prefer not to say",
-    "dateOfBirth": "3. Date of birth",
+    "dateOfBirth": "* Date of birth",
     "dateOfBirthPlaceholder": "Select your date of birth",
-    "nationality": "4. Nationality",
+    "nationality": "* Nationality",
     "nationalityPlaceholder": "Select your nationality",
-    "proofOfIdentity": "5. Proof of identity",
+    "proofOfIdentity": "* Proof of identity",
     "proofPassport": "Passport",
     "proofId": "ID",
     "proofDL": "Driving license",
-    "adressSectionTitle": "B. Address Details",
-    "status": "6. Status",
+    "adressSectionTitle": "Address Details",
+    "status": "* Status",
     "statusResident": "Resident Individual",
     "statusNonResident": "Non Resident",
     "statusForeign": "Foreign National",
-    "correspondenceAdress": "7. Correspondence address",
-    "street": "Street address",
-    "cityPlaceholder": "City",
+    "correspondenceAdress": "Correspondence address",
+    "street": "* Street address",
+    "cityPlaceholder": "* City",
     "statePlaceholder": "State/Region/Province",
-    "zipPlaceholder": "Postal/Zip Code",
-    "countryPlaceholder": "Country",
-    "phoneNumber": "8. Phone number",
+    "zipPlaceholder": "* Postal/Zip Code",
+    "countryPlaceholder": "* Country",
+    "phoneNumber": "* Phone number",
     "fileSectionTitle": "C. File Upload",
-    "drag&DropTitle": "9. Please upload related documents",
+    "drag&DropTitle": "* Please upload related documents",
     "declarationSectionTitle": "D. Declaration",
-    "declarationText": "I hereby declare that the information provided in this form is accurate and complete. I confirm that any information is found incorrect and/or incomplete that leads a violation of regulations may initiate legal actions, and I accept that I am the responsible party for any and all charges, penalties and violations.",
+    "declarationText": "* I hereby declare that the information provided in this form is accurate and complete. I confirm that any information is found incorrect and/or incomplete that leads a violation of regulations may initiate legal actions, and I accept that I am the responsible party for any and all charges, penalties and violations.",
     "signature": "Name of the Applicant",
     "submitButton": "Submit",
     "doneTextFirstPart": "Your application was submitted successfully.",
