fix(i18n):changed back the text deleted due to conflict

--- a/src/locales/langs/de.json
+++ b/src/locales/langs/de.json
@@ -4,7 +4,7 @@
       "title": "Deutscher Agent Wise"
     },
     "Page": {
-      "title": "Willkommen bei AgentWise - Ihrer Komplettlösung für effektives Vertriebsmanagement",
+      "title": "Willkommen bei AgentWise - der klügsten Immobilienplattform, die auf Ihren beruflichen Erfolg ausgerichtet ist",
       "link": "Gehen Sie zur Testseite",
       "signUpLink": "Sign Up",
       "signInLink": "Sign In",
