fix(sign-up): added minor code corrections

--- a/src/locales/langs/de.json
+++ b/src/locales/langs/de.json
@@ -25,7 +25,7 @@
     "agree": "Indem Sie fortfahren, stimmen Sie AgentWise zu",
     "and": "und"
   },
-  "SignUpPage": {
+  "signUpPage": {
     "Main": {
       "title": "Registrieren",
       "emailInput": "Email",
