fix: correct minor code issues

--- a/src/locales/langs/de.json
+++ b/src/locales/langs/de.json
@@ -13,7 +13,7 @@
     "maintext": "Dies ist eine Testseite",
     "reduxTitle": "Redux-Beispiel"
   },
-  "SignInPage": {
+  "signInPage": {
     "Main": {
       "termsLink": "Terms & Bedingungen",
       "policyLink": "Datenschutzrichtlinie",
