--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -4,7 +4,7 @@
       "title": "Agent Wise"
     },
     "Page": {
-      "title": "Welcome to AgentWise - the wisest real estate platform aimed at your professional success",
+      "title": "Welcome to AgentWise - the wisest real estate platform aimed at your professional sucesss",
       "link": "Go to Test page",
       "signUpLink": "Sign Up",
       "signInLink": "Sign In",
@@ -35,7 +35,7 @@
       "forgotPasswordLinkTitle": "Forgot password"
     }
   },
-  "signUpPage": {
+  "SignUpPage": {
     "Main": {
       "title": "Sign up",
       "emailInput": "Email",
