--- a/src/locales/langs/de.json
+++ b/src/locales/langs/de.json
@@ -36,7 +36,7 @@
       "forgotPasswordLinkTitle": "Passwort vergessen"
     }
   },
-  "SignUpPage": {
+  "signUpPage": {
     "Main": {
       "title": "Registrieren",
       "emailInput": "Email",
