--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -35,7 +35,7 @@
       "forgotPasswordLinkTitle": "Forgot password"
     }
   },
-  "SignUpPage": {
+  "signUpPage": {
     "Main": {
       "title": "Sign up",
       "emailInput": "Email",
