--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -1,11 +1,14 @@
 {
   "Home": {
-    "TestHeader": {
+    "Header": {
       "title": "Agent Wise"
     },
     "Page": {
-      "title": "This is a Home page",
-      "link": "Go to Test page"
+      "title": "Welcome to AgentWise - the wisest real estate platform aimed at your professional sucesss",
+      "link": "Go to Test page",
+      "signUpLink": "Sign Up",
+      "signInLink": "Sign In",
+      "buttonTxt": "Get started now"
     }
   },
   "TestPage": {
