feat: + email variable

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -107,7 +107,7 @@
   },
   "VerifyEmail": {
     "title": "Please check your email!",
-    "emailSent": "We have emailed a 6-digit confirmation code to acb@domain, please enter the code in below box to verify your email.",
+    "emailSent": "We have emailed a 6-digit confirmation code to {email}, please enter the code in below box to verify your email.",
     "code": "Code",
     "expire": "will expire in 01:35",
     "sendAgain": "Resend code",
