fix:  fixed bugs

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -1,7 +1,7 @@
 {
   "Home": {
     "Header": {
-      "title": "Agent Wise"
+      "title": "ZenBitRock"
     },
     "Page": {
       "title": "Welcome to AgentWise - the wisest real estate platform aimed at your professional sucesss",
