--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -65,6 +65,13 @@
     "emailRequired": "Email is required",
     "emailValid": "Email is not valid"
   },
+  "VerifyCodePage": {
+    "title": "Enter code",
+    "header": "We send OTP verification to your email this code",
+    "dontHaveCode": "Don't have a code?",
+    "sendAgain": "Send Again",
+    "button": "Verify"
+  },
   "signInPage": {
     "Main": {
       "termsLink": "Terms & Conditions",
