fix: * prop name

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -75,7 +75,7 @@
       "forgotPasswordLinkTitle": "Forgot password"
     }
   },
-  "SignUpPage": {
+  "signUpPage": {
     "Main": {
       "title": "Sign up",
       "emailInput": "Email",
