--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -259,5 +259,31 @@
     "agencyLink": "https://blagovist.ua/",
     "countryTxt": "Country",
     "cityTxt": "City"
+  },
+  "properties": {
+    "title": "My properties",
+    "alt": "Property photo",
+    "Description": "Description",
+    "for_sale": "For Sale",
+    "for_rent": "For Rent",
+    "for_sale_and_rent": "For Sale and Rent",
+    "for_management": "For Management",
+    "for_auction": "For Auction",
+    "null": "",
+    "": "",
+    "pending": "Pending",
+    "available": "Available",
+    "reserved": "Reserved",
+    "sold": "Sold",
+    "rented": "Rented",
+    "withdrawn": "Withdrawn",
+    "onboarding": "Onboarding",
+    "acquisition": "Acquisition",
+    "valuation": "Valuation",
+    "instructed": "Instructed",
+    "exchange": "Exchange",
+    "sale_agreed": "Sale agreed",
+    "sold_subject_to_contract": "Sold subject to contract",
+    "under_offer": "Under offer"
   }
 }
