--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -63,8 +63,7 @@
   },
   "VerificationDonePage": {
     "mainTitle": "KYC form",
-    "doneTextFirstPart": "Your application was submitted successfully.",
-    "doneTextSecondPart": "Thank you for joining AgentWise!",
+    "doneText": "AgentWise profile has been successfully created!",
     "submitButton": "Go to sign in page"
   },
   "RestorePasswordPage": {
